add: gsap and hero section

--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,6 @@
   --color-zinc: #101010;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 body {
   color: white;
@@ -23,10 +18,18 @@ body {
   background: #000;
   border-color: #3b3b3b;
   user-select: none;
+  font-family: 'SF Pro Text', sans-serif;
 }
 
 canvas {
   touch-action: none;
+}
+
+.screen-max-width {
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  position: relative;
+  max-width: 1440px;
 }
 
 @utility flex-center {
@@ -38,24 +41,19 @@ canvas {
 }
 
 @utility btn {
-  @apply px-5 py-2 rounded-3xl bg-[var(--color-blue)] my-5 
-         hover:bg-transparent border border-transparent 
-         hover:border hover:text-[var(--color-blue)] hover:border-[var(--color-blue)];
+  @apply px-5 py-2 rounded-3xl bg-[var(--color-blue)] my-5 hover:bg-transparent border border-transparent hover:border hover:text-[var(--color-blue)] hover:border-[var(--color-blue)];
 }
 
 @utility color-container {
-  @apply flex items-center justify-center px-4 py-4 
-         rounded-full bg-[var(--color-gray-300)] backdrop-blur;
+  @apply flex items-center justify-center px-4 py-4 rounded-full bg-[var(--color-gray-300)] backdrop-blur;
 }
 
 @utility size-btn-container {
-  @apply flex items-center justify-center p-1 rounded-full 
-         bg-[var(--color-gray-300)] backdrop-blur ml-3 gap-1;
+  @apply flex items-center justify-center p-1 rounded-full bg-[var(--color-gray-300)] backdrop-blur ml-3 gap-1;
 }
 
 @utility size-btn {
-  @apply w-10 h-10 text-sm flex justify-center items-center 
-         bg-white text-black rounded-full transition-all;
+  @apply w-10 h-10 text-sm flex justify-center items-center bg-white text-black rounded-full transition-all;
 }
 
 @utility common-padding {
@@ -63,13 +61,11 @@ canvas {
 }
 
 @utility section-heading {
-  @apply text-[var(--color-gray)] lg:text-6xl md:text-5xl text-3xl 
-         lg:mb-0 mb-5 font-medium opacity-0 translate-y-20;
+  @apply text-[var(--color-gray)] lg:text-6xl md:text-5xl text-3xl lg:mb-0 mb-5 font-medium opacity-0 translate-y-20;
 }
 
 @utility feature-text {
-  @apply text-[var(--color-gray)] max-w-md text-lg md:text-xl 
-         font-semibold opacity-0 translate-y-[100px];
+  @apply text-[var(--color-gray)] max-w-md text-lg md:text-xl font-semibold opacity-0 translate-y-[100px];
 }
 
 @utility feature-text-container {
@@ -85,8 +81,7 @@ canvas {
 }
 
 @utility link {
-  @apply text-[var(--color-blue)] hover:underline cursor-pointer flex 
-         items-center text-xl opacity-0 translate-y-20;
+  @apply text-[var(--color-blue)] hover:underline cursor-pointer flex items-center text-xl opacity-0 translate-y-20;
 }
 
 @utility control-btn {
@@ -94,8 +89,7 @@ canvas {
 }
 
 @utility hero-title {
-  @apply text-center font-semibold text-3xl text-[var(--color-gray-100)] 
-         opacity-0 max-md:mb-10;
+  @apply text-center font-semibold text-3xl text-[var(--color-gray-100)] opacity-0 max-md:mb-10;
 }
 
 @utility hiw-title {
